@@ -1,3 +1,10 @@
+2013-01-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readline.m4 (GAWK_CHECK_READLINE): Renamed from GNUPG_CHECK_READLINE.
+	Test program changed and test changed to try to run the built program
+	since some systems don't notice a link dependency between libreadline
+	and other libs until runtime. Isn't that fun?
+
 2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.0.2: Release tar ball made.
