@@ -1,3 +1,7 @@
+2013-01-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* config.h: Version bumped.
+
 2012-12-28  Eli Zaretskii  <eliz@gnu.org>
 
 	* Makefile (install1): Don't require a Unixy shell and Sed.  Don't
