@@ -5,6 +5,8 @@
 	* dfa.c (MALLOC): Undef first, for Irix.
 	* Makefile.am (LDADD): Use LIBREADLINE and LIBMPFR instead of
 	automake substitutions.
+	* configure.ac (AC_INIT): Version bump.
+	(GAWK_CHECK_READLINE): Renamed from GNUPG_CHECK_READLINE.
 
 2013-01-23         Arnold D. Robbins     <arnold@skeeve.com>
 
